[package]
name = "ldk-wasm"
version = "0.1.3"
edition = "2021"
description = "Ephemeral Lightning node compiled to WASM"
authors.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# LDK core — moneydevkit fork with LSPS4 + accept_underpaying_htlcs
lightning = { git = "https://github.com/moneydevkit/rust-lightning.git", branch = "lsp-0.2.0_accept-underpaying-htlcs", default-features = false }
lightning-invoice = { git = "https://github.com/moneydevkit/rust-lightning.git", branch = "lsp-0.2.0_accept-underpaying-htlcs", default-features = false }
lightning-rapid-gossip-sync = { git = "https://github.com/moneydevkit/rust-lightning.git", branch = "lsp-0.2.0_accept-underpaying-htlcs", default-features = false }

# Bitcoin primitives
bitcoin = { version = "0.32", default-features = false, features = ["serde", "secp-recovery"] }
bip39 = { version = "2.0", default-features = false, features = ["alloc"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Panic hook for better WASM error messages
console_error_panic_hook = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Hex decoding for block headers
hex = "0.4"

# Entropy for WASM — include both versions to cover transitive deps
getrandom = { version = "0.2", features = ["js"] }

# Web APIs for console logging in WASM
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
